--- a/src/index.css
+++ b/src/index.css
@@ -53,7 +53,7 @@ img {
   padding-top: 12px;
   padding-bottom: 12px;
   color: #fff;
-  background-color: #3f51b5;
+  background-color:#F08080;
   box-shadow: 0px 2px 4px -1px rgba(0, 0, 0, 0.2),
     0px 4px 5px 0px rgba(0, 0, 0, 0.14), 0px 1px 10px 0px rgba(0, 0, 0, 0.12);
 }
@@ -126,7 +126,7 @@ img {
   max-width: calc(100vw - 48px);
   grid-template-columns: repeat(auto-fill, minmax(320px, 1fr));
   grid-gap: 16px;
-  margin-top: 0;
+  margin-top: 30px;
   margin-bottom: 0;
   padding: 0;
   list-style: none;
@@ -180,10 +180,17 @@ img {
 /*
 * Стили компонента Buton (Load more)
 */
+.LoaderWrapper{
+  
+  text-align: center;
+  align-items: center;
+  padding: 30px;
+}
 .Button {
+
   padding: 8px 16px;
   border-radius: 2px;
-  background-color: #3f51b5;
+  background-color: #F08080;
   transition: all 250ms cubic-bezier(0.4, 0, 0.2, 1);
   text-align: center;
   display: inline-block;
@@ -203,5 +210,6 @@ img {
 
 .Button:hover,
 .Button:focus {
-  background-color: #303f9f;
+  background-color:#CD5C5C;
 }
+
